<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#F7F7F7"
    android:layout_height="match_parent">

    <RelativeLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F7F7F7"
        android:padding="16dp">

        <TextView android:id="@+id/heading_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:textColor="@color/darkGreyText"
            android:textSize="12sp"
            android:text="@string/id"/>

        <TextView android:id="@+id/heading_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/heading_id"
            android:layout_toStartOf="@+id/heading_hours"
            android:textColor="@color/darkGreyText"
            android:layout_marginEnd="2dp"
            android:textSize="12sp"
            android:text="@string/address"/>

        <TextView android:id="@+id/heading_hours"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/heading_balance"
            android:textColor="@color/darkGreyText"
            android:gravity="start"
            android:textSize="12sp"
            android:text="@string/hours_name"/>

        <TextView android:id="@+id/heading_balance"
            android:layout_marginStart="8dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:textColor="@color/darkGreyText"
            android:textSize="12sp"
            android:text="@string/balance_heading"/>
    </RelativeLayout>
    <View android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/wallet_list_divider" />


    <android.support.v7.widget.RecyclerView android:id="@+id/address_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </android.support.v7.widget.RecyclerView>

</LinearLayout>